fix: filter by environment when searching APIs with SearchEngine
https://gravitee.atlassian.net/browse/APIM-1032
https://github.com/gravitee-io/issues/issues/8923
(cherry picked from commit fd0a446e57ad92c3c81212c6a62153f7fd2c9126)